# workhour-frontend

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build-tauri.yml
.hermes/plans/: 2026-06-04_editor-optimization.md
ref/: dynamic_fetch.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app/: Cargo.toml  tauri.conf.json
src-tauri/crates/app/src/: commands.rs  main.rs
src-tauri/crates/eworkhour/: Cargo.toml
src-tauri/crates/eworkhour/src/: lib.rs
src-tauri/crates/test-cli/: Cargo.toml
src-tauri/crates/test-cli/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  eworkhour.rs  main.rs
