[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rand = "0.8"

[profile.release]
strip = true
lto = false
opt-level = "s"
